--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "scripter",
-  "version": "1.0.0",
-  "description": "A React-based scripting library",
+  "name": "scripter-react",
+  "version": "1.0.3",
+  "description": "Run your scripts programmatically with React.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -11,13 +11,24 @@
   "scripts": {
     "test": "echo \"Error: no test specified\"",
     "start": "pnpm exec ts-node Renderer.tsx",
-    "isolate": "tsc && node ./dist/Example.js",
+    "example": "pnpm exec ts-node",
     "build": "tsc",
     "prepare": "npm run build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "react",
+    "scripting",
+    "automation",
+    "development",
+    "tooling",
+    "typescript"
+  ],
+  "author": "thomscoder",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/thomscoder/scripter"
+  },
   "dependencies": {
     "chalk": "^4.1.2",
     "react-reconciler": "^0.29.2",
@@ -29,9 +40,10 @@
   "devDependencies": {
     "@types/node": "^22.9.2",
     "@types/react": "^18.3.12",
-    "@types/uuid": "^10.0.0",
-    "react": "^18.3.1",
+    "@types/react-reconciler": "^0.28.8",
+    "@types/uuid": "^9.0.8",
+    "react": "^18.2.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.3.3"
   }
 }
